--- a/scss/modules/_ind_02_section.scss
+++ b/scss/modules/_ind_02_section.scss
@@ -25,8 +25,10 @@
                 width: 50%; 
                 background: rgba(201, 194, 182, 0.65);
             }
-            @include media($xxlarge){
-                max-width: calc(100% - 20rem);
+            .ind-wrapper {
+                @include media($xxlarge){
+                    max-width: calc(100% - 20rem);
+                }
             }
         }
     }
