--- a/scss/modules/__modules.scss
+++ b/scss/modules/__modules.scss
@@ -5,6 +5,7 @@
 // Website Section
 @import 'global/header',
         'global/global',
+        'global/footer',
         'ind_01_hero_section',
         'ind_02_section',
         'ind_03_section',
