--- a/scss/style-config/__style-config.scss
+++ b/scss/style-config/__style-config.scss
@@ -8,7 +8,7 @@ $roman		:		'Noto Serif', serif;
 
 
 // WebColors
-
+$footer				:		 #171717;
 $light-grey			:		 #f8f9fb;
 $coffee				:		 #7f7f7f;
 $slate				:		 #c7b198;
