--- a/scss/modules/global/_header.scss
+++ b/scss/modules/global/_header.scss
@@ -5,6 +5,56 @@
     top: 0;
     left: 0;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
+    .drop-down {
+        display: none;
+        position: absolute;
+        top: 7.1rem;
+        left: 0;
+        width: 100%;
+        background: $white;
+        padding-bottom: 5rem;
+        ul {
+            li  {
+                padding: 1rem ;
+                a {
+                    color: $black;
+                }
+                &.active {
+                    a {
+                        color: $slate;
+                    }
+                }
+            }
+        }
+        .social-icon {
+            display: inline-block;
+            @include media($medium) {
+                display: none;
+            }
+            a {
+                @include flex-center;
+                display: inline-flex;
+                margin-right: 5px;
+                width: 3.5rem;
+                height: 3.5rem;     
+                background-color: $slate;
+                border-radius: 100%;
+                transition: all 0.2s ease;
+                padding: 0.7rem;
+                &:hover {
+                    background-color: $coffee;
+                }
+                img {   
+                    max-height: 1.7rem;
+                    max-width: 1.7rem; 
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+        }
+    }
+
     nav {
         padding: 1.75rem 0;
         background-color: $white;
@@ -76,8 +126,25 @@
                             height: 0.3rem;
                             display: inline-block;
                             margin-bottom: 0.4rem;
+                            position: relative;
+                            transition: all 0.6s ease;
                             &:last-child {
                                 margin-bottom: 0em;
+                            }
+                        }
+                        &.rotate {
+                            span:nth-child(2) {
+                                display: none;
+                            }
+                            span:nth-child(1)  {
+                                transform: rotate(45deg);
+                                top: 3px;
+                                margin: 0;
+                            }
+                            span:nth-child(3)  {
+                                transform: rotate(-45deg);
+                                top: 0px;
+                                margin: 0;
                             }
                         }
                     }
