--- a/scss/modules/_ind_04_section.scss
+++ b/scss/modules/_ind_04_section.scss
@@ -48,6 +48,8 @@
             li {
                 list-style-type: none;
                 margin: 0 6px;
+                width: 2rem;
+                    height: 2rem;
                 &.slick-active {
                     button {
                         background-color: $white;
