--- a/scss/modules/_ind_04_section.scss
+++ b/scss/modules/_ind_04_section.scss
@@ -49,7 +49,8 @@
                 list-style-type: none;
                 margin: 0 6px;
                 width: 2rem;
-                    height: 2rem;
+                height: 2rem;
+                display: inline-block;
                 &.slick-active {
                     button {
                         background-color: $white;
