--- a/scss/modules/_ind_04_section.scss
+++ b/scss/modules/_ind_04_section.scss
@@ -64,6 +64,7 @@
                     border: 0.3rem solid $white;
                     border-radius: 100%;
                     color: transparent;
+                    font-size: 0;
                 }
             }
         }
