--- a/scss/modules/_ind_02_section.scss
+++ b/scss/modules/_ind_02_section.scss
@@ -39,6 +39,7 @@
         flex-flow: column;
         p.text-white {
             color: $white;
+            margin-bottom: 1rem;
         }
         .content {
             width: 100%;
@@ -55,6 +56,7 @@
 
             p {
                 font-size: 1.6rem; 
+                margin-bottom: 1rem;
                 @include media($medium) {
                     font-size: 2.4rem;
                 }
