image path chnaged

--- a/scss/modules/_ind_01_hero_section.scss
+++ b/scss/modules/_ind_01_hero_section.scss
@@ -4,7 +4,7 @@
     float: left;
     height: calc(100vh - 30rem);   
     min-height: 51.2rem; 
-    background: url(/assets/img/hero-banner.jpg) no-repeat;
+    background: url(../img/hero-banner.jpg) no-repeat;
     background-size: cover;
     position: relative;
 
