--- a/scss/style-config/_buttons.scss
+++ b/scss/style-config/_buttons.scss
@@ -55,7 +55,7 @@ $button-side-spacing: 1rem;
 		}
 		&:before {
 			content: '';
-			background: url(/assets/img/cta-bg.jpg) no-repeat;
+			background: url(../img/cta-bg.jpg) no-repeat;
 			width: 15px;
 			height: 15px;
 			border-radius: 100%;
