--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -498,7 +498,7 @@ template {
       border-color: black; }
     .button.secondary:before {
       content: '';
-      background: url(/assets/img/cta-bg.jpg) no-repeat;
+      background: url(../img/cta-bg.jpg) no-repeat;
       width: 15px;
       height: 15px;
       border-radius: 100%;
@@ -856,7 +856,7 @@ footer {
   float: left;
   height: calc(100vh - 30rem);
   min-height: 51.2rem;
-  background: url(/assets/img/hero-banner.jpg) no-repeat;
+  background: url(../img/hero-banner.jpg) no-repeat;
   background-size: cover;
   position: relative; }
   @media screen and (min-width: 600px) {
@@ -915,7 +915,7 @@ footer {
   width: 100%;
   float: left;
   height: 300px;
-  background-image: url(/assets/img/marketing.jpg);
+  background-image: url(../img/marketing.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
