--- a/scss/modules/_ind_02_section.scss
+++ b/scss/modules/_ind_02_section.scss
@@ -2,7 +2,7 @@
     width: 100%;
     float: left;
     height: 300px;
-    background-image: url(/assets/img/marketing.jpg);
+    background-image: url(../img/marketing.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
